title change Signed-off-by: Gavin-John Noonan <mail@gjnoonan.co.uk>

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
 
-    <title>HTML5 Bones :: PAGE TITLE</title>
+    <title>NPGS | Noonans Play Games Sometimes Online</title>
 
-    <meta name="description" content="NPGS - Noonans Play Games Sometimes Online">
+    <meta name="description" content="NPGS | Noonans Play Games Sometimes Online">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 </head>
 <body>
