cheeky bit of centering
Signed-off-by: Gavin-John Noonan <mail@gjnoonan.co.uk>

--- a/index.html
+++ b/index.html
@@ -7,8 +7,21 @@
 
     <meta name="description" content="NPGS | Noonans Play Games Sometimes Online">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+
+    <style>
+     body, html {
+         height: 100%;
+         display: grid;
+     }
+     .wrap {
+         margin: auto;
+     }
+    </style>
 </head>
 <body>
-	<h1>NPGS.online - coming soon</h1>
+    <div class="wrap">
+
+	      <h1>NPGS.online - coming soon</h1>
+    </div>
 </body>
 </html>
